# plush

./: .gitignore  Makefile  README.md  configure
legacy/runcmd/: .test-001  .test-002  .test-003  AUTHORS.txt  Makefile.am  Makefile.in  TODO  debug.h  runcmd.c  t1.c  test-001.c  test-002.c  test-002.d  test-003  test-004.c  test-004.d  testutils.c
legacy/shell/: debug.h  present.txt  sup.c
myproject/runcmd/: runcmd.c
old/: configure.ac
old/runcmd/: config.mk  runcmd.c  runcmd.h  runcmd.txt  t.h  t1.d  t2.c  test-001  test-001.c  test-001.d  test-003.c  test-004  testutils.h
runcmd/: .t1  .t2  .test-001  .test-002  .test-003  .test-004  Makefile  README  config.mk  runcmd.c  t1  t2  t2.d  test-001  test-002  test-003  test-003.d  test-004
runcmd/runcmd/: runcmd.c  runcmd.h  test-runcmd.c
shell/: Makefile  Makefile.am  Makefile.in  debug.sh  main.c  parser.c  parser.h  shell.c  shell.h  sup.c  sup.h  utils.c  utils.h
src/: debug.h  input.c  input.h  jobs.c  jobs.h  main.c  shell.c  shell.h
